finalised project for all endpoints